[package]
name = "ffi"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "ironrdp"
crate-type = ["staticlib", "cdylib"]
doc = false
test = false
doctest = false

[dependencies]
diplomat = "0.7"
diplomat-runtime = "0.14"
ironrdp = { path = "../crates/ironrdp", features = ["session", "connector", "dvc", "svc", "rdpdr", "rdpsnd", "graphics", "input", "cliprdr", "displaycontrol"] }
ironrdp-cliprdr-native.path = "../crates/ironrdp-cliprdr-native"
ironrdp-dvc-pipe-proxy.path = "../crates/ironrdp-dvc-pipe-proxy"
ironrdp-core = { path = "../crates/ironrdp-core", features = ["alloc"] }
ironrdp-rdcleanpath.path = "../crates/ironrdp-rdcleanpath"
sspi = { version = "0.18", features = ["network_client"] }
thiserror = "2"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0"

[lints]
workspace = true
