[package]
name = "ffi"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "ironrdp"
crate-type = ["staticlib", "cdylib"]
doc = false
test = false
doctest = false

[dependencies]
diplomat = { git = "https://github.com/irvingoujAtDevolution/diplomat.git", rev = "882006b1d35b1a30566e3d6d4b8f0bb5f4dae640" }
diplomat-runtime = { git = "https://github.com/irvingoujAtDevolution/diplomat.git", rev = "882006b1d35b1a30566e3d6d4b8f0bb5f4dae640" }
ironrdp = { path = "../crates/ironrdp", features = ["session", "connector", "dvc", "svc", "rdpdr", "rdpsnd", "graphics", "input", "cliprdr", "displaycontrol"] }
ironrdp-cliprdr-native.path = "../crates/ironrdp-cliprdr-native"
ironrdp-dvc-pipe-proxy.path = "../crates/ironrdp-dvc-pipe-proxy"
ironrdp-core = { path = "../crates/ironrdp-core", features = ["alloc"] }
ironrdp-rdcleanpath.path = "../crates/ironrdp-rdcleanpath"
sspi = { version = "0.21", features = ["network_client"] }
thiserror = "2"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0"

[lints]
workspace = true
