[package]
name = "ironrdp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]

[profile.release]
debug = 1

[dependencies]
ironrdp-pdu = { path = "../crates/pdu" }
ironrdp-graphics = { path = "../crates/graphics" }
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[[bin]]
name = "pdu_decoding"
path = "fuzz_targets/pdu_decoding.rs"
test = false
doc = false

[[bin]]
name = "rle_decompression"
path = "fuzz_targets/rle_decompression.rs"
test = false
doc = false
