[package]
name = "ironrdp-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]

[profile.release]
debug = 1

[dependencies]
ironrdp-fuzzing = { path = "../crates/ironrdp-fuzzing" }
libfuzzer-sys = "0.4"

[[bin]]
name = "pdu_decoding"
path = "fuzz_targets/pdu_decoding.rs"
test = false
doc = false

[[bin]]
name = "rle_decompression"
path = "fuzz_targets/rle_decompression.rs"
test = false
doc = false

[[bin]]
name = "bitmap_stream"
path = "fuzz_targets/bitmap_stream.rs"
test = false
doc = false

[[bin]]
name = "cliprdr_format"
path = "fuzz_targets/cliprdr_format.rs"
test = false
doc = false

[[bin]]
name = "channel_processing"
path = "fuzz_targets/channel_processing.rs"
test = false
doc = false
bench = false
