[package]
name = "ironrdp-cli"
version = "0.4.2"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/Devolutions/IronRDP"
repository = "https://github.com/Devolutions/IronRDP"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
keywords = ["rdp", "client", "remote", "desktop", "protocol", "gfx", "rfx"]

[features]
default = ["rustls"]
rustls = ["dep:rustls", "dep:tokio-rustls"]
native-tls = ["dep:native-tls", "dep:async-native-tls"]

[dependencies]

# Protocol
ironrdp = { path = "../ironrdp" }
ironrdp-session = { path = "../ironrdp-session" }
sspi = "0.4.0"

# CLI
clap = { version = "4.0", features = ["derive", "cargo"] }
exitcode = "1.1.2"

# logging
log = "0.4"
fern = "0.6"

# SSL
x509-parser = "0.14"
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.20", features = ["dangerous_configuration"], optional = true }

# async, futures
tokio = { version = "1", features = ["full"]}
async-native-tls = { version = "0.4", default-features = false, features = [ "runtime-tokio" ], optional = true }
tokio-rustls =  { version = "0.23", optional = true }
tokio-util = { version = "0.7.4", features = ["compat"] }
futures-util = "0.3"

# Utils
chrono = "0.4.22"
image = "0.24.4"
