[package]
name = "ironrdp-core"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/Devolutions/IronRDP"
repository = "https://github.com/Devolutions/IronRDP"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "A Rust implementation of the Microsoft Remote Desktop Protocol"
keywords = ["rdp", "remote", "desktop", "protocol"]

[dependencies]
bit_field = "0.10.1"
bitflags = "1.3.2"
byteorder = "1.4.3"
der-parser = "8.1.0"
thiserror = "1.0.37"
lazy_static = "1.4.0"
md5 = { package = "md-5", version = "0.10.5" }
num-bigint = "0.4.3"
num-derive = "0.3.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
sha1 = "0.10.5"
x509-parser = "0.14"
tap = "1.0.1"
log = "0.4"
