[package]
name = "ironrdp-devolutions-gateway"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/Devolutions/IronRDP"
repository = "https://github.com/Devolutions/IronRDP"
authors = ["Devolutions Inc. <infos@devolutions.net>"]

[dependencies]
der = { version = "0.6.0", features = ["alloc", "derive"] }
bytes = "1.3.0"

[dev-dependencies]
rstest = "0.15.0"
hex = "0.4.3"
pretty_assertions = "1.3.0"
