[package]
name = "ironrdp-graphics"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/Devolutions/IronRDP"
repository = "https://github.com/Devolutions/IronRDP"
authors = ["Devolutions Inc. <infos@devolutions.net>"]

[dependencies]
ironrdp-core = { path = "../ironrdp-core" }
num-traits = "0.2.15"
num-derive = "0.3.3"
byteorder = "1.4.3"
thiserror = "1.0.37"
bitvec = "1.0.1"
bit_field = "0.10.1"
bitflags = "1.3.2"
lazy_static = "1.4.0"

[dev-dependencies]
hex-literal = "0.3.4"
proptest = "1.0.0"
