[package]
name = "ironrdp-renderer"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
glow = "0.11"
log = "0.4"
futures = "0.3.17"
failure = "0.1"
byteorder = "1.3"
ironrdp = { path = "../ironrdp" }
glutin = { version = "0.29" }
openh264  = { version = "0.3" }
tokio = { version = "1", features = ["full"]}