[package]
name = "ironrdp-session-async"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/Devolutions/IronRDP"
repository = "https://github.com/Devolutions/IronRDP"
authors = ["Devolutions Inc. <infos@devolutions.net>"]

[dependencies]
ironrdp-core = { path = "../ironrdp-core" }
ironrdp-graphics = { path = "../ironrdp-graphics" }
bytes = "1"
num-traits = "0.2.15"
bit_field = "0.10.1"
byteorder = "1.4.3"
futures-util = "0.3"
