[package]
name = "ironrdp"
version = "0.4.2"
edition = "2021"
readme = "../README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/Devolutions/IronRDP"
repository = "https://github.com/Devolutions/IronRDP"
authors = ["Marc-André Moreau <mamoreau@devolutions.net>",
           "Vlad Aleksashyn <vlad.al.dp@gmail.com"]
description = "A Rust implementation of the Microsoft Remote Desktop Protocol"
keywords = ["rdp", "remote", "desktop", "protocol"]

[dependencies]
bit_field = "0.10.1"
bitflags = "1.3.2"
bitvec = "1.0.0"
byteorder = "1.4.3"
bytes = "1"
der-parser = "8.0.0"
failure = "0.1.8"
hex-literal = "0.3.4"
lazy_static = "1.4.0"
md-5 = "0.10.1"
num-bigint = "0.4.3"
num-derive = "0.3.3"
num-integer = "0.1.44"
num-traits = "0.2.14"
ring = "0.16.20"
x509-parser = "0.14"
tap = "1.0.1"