[package]
name = "ironrdp"
version = "0.4.2"
edition = "2018"
readme = "../README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/Devolutions/IronRDP"
repository = "https://github.com/Devolutions/IronRDP"
authors = ["Marc-André Moreau <mamoreau@devolutions.net>",
           "Vlad Aleksashyn <vlad.al.dp@gmail.com"]
description = "A Rust implementation of the Microsoft Remote Desktop Protocol"
keywords = ["rdp", "remote", "desktop", "protocol"]

[dependencies]
bit_field = "0.10"
bitflags = "1.3"
bitvec = "0.17"
byteorder = "1.4"
bytes = "1.1"
der-parser = "7.0.0"
failure = "0.1"
hex-literal = "0.3"
lazy_static = "1.4"
md-5 = "0.10"
num-bigint = "0.4"
num-derive = "0.3"
num-integer = "0.1"
num-traits = "0.2"
ring = "0.16"
x509-parser = "0.13"
