[package]
name = "ironrdp"
version = "0.4.2"
edition = "2021"
readme = "../README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/Devolutions/IronRDP"
repository = "https://github.com/Devolutions/IronRDP"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "A Rust implementation of the Microsoft Remote Desktop Protocol"
keywords = ["rdp", "remote", "desktop", "protocol"]

[features]
default = []
rustls = ["ironrdp-session/rustls"]
native-tls = ["ironrdp-session/native-tls"]

[dependencies]
ironrdp-core = { path = "../ironrdp-core" }
ironrdp-session = { path = "../ironrdp-session" }
ironrdp-graphics = { path = "../ironrdp-graphics" }
ironrdp-input = { path = "../ironrdp-input" }
