[package]
name = "ironrdp_client"
version = "0.4.2"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/Devolutions/IronRDP"
repository = "https://github.com/Devolutions/IronRDP"
authors = ["Marc-André Moreau <mamoreau@devolutions.net>",
           "Vladyslav Hordiienko <hord.vlad@gmail.com"]
keywords = ["rdp", "client", "remote", "desktop", "protocol", "gfx", "rfx"]

[lib]
name = "ironrdp_client"
path = "src/lib.rs"

[[bin]]
name = "ironrdp_client_app"
path = "src/main.rs"

[features]
default = ["rustls"]
rustls = ["dep:rustls"]
native-tls = ["dep:native-tls"]

[dependencies]
ironrdp = { path = "../ironrdp" }
sspi = { version = "0.3.4", features = ["network_client"] }
clap = "2.33"
bytes = "0.5"
failure = "0.1"
chrono = "0.4"
fern = "0.6"
log = "0.4"
x509-parser = "0.6.0"
whoami = "0.8"
num-traits = "0.2"
num-derive = "0.3"
semver = "0.9"
lazy_static = "1.4"
exitcode = "1.1"
bufstream = "0.1"
ring = "0.16.0"
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.20", features = ["dangerous_configuration"], optional = true }
dns-lookup = "1.0.8"
